# circuita

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  DEVELOPMENT.org  Makefile  README.md  components.cfg  heximula.cfg  logbook.org  nob.c
examples/: simple_components.cfg  simple_firmware.c
include/: cli.h  microcontroller.h  pin_manager.h  qemu_interface.h
include/components/: capacitor.h  diode.h  resistor.h  util.h
include/config/: config_reader.h
include/core/: resistor.h
src/: CMakeLists.txt  main.c
src/cli/: cli.c
src/components/: resistor.c  util.c
src/config/: config_reader.c
src/core/: microcontroller.c  pin_manager.c  resistor.c
src/qemu/: qemu_interface.c
test/: CMakeLists.txt  test_basic.c  test_resistor.c  test_util.c
